@@ -9,7 +9,6 @@
     <property name="resizable">False</property>
     <property name="window_position">center</property>
     <property name="urgency_hint">True</property>
-    <signal name="destroy_event" handler="on_window_main_destroy_event"/>
     <signal name="delete_event" handler="on_window_main_delete_event"/>
     <child>
       <object class="GtkVBox" id="vbox5">
