@@ -5,6 +5,12 @@ update-manager (1:0.125.1) UNRELEASEDkarmic; urgency=low
   
   [ Rugby471 ]
   * Center window on the screen (LP: #423355)
+  
+  [ Michael Vogt ]
+  * DistUpgrade/DistUpgrade.ui:
+    - remove unused "destroy_event" handler (LP: #428842)
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - make ARMv6 error message clearer (LP: #409523)
 
  -- Josh Holland <jrh@joshh.co.uk>  Sun, 06 Sep 2009 11:34:11 +0100
 
